--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
-title: John Doe # your name (or website title) here
-logo: "/images/logo.png?raw=true" # your photo (or logo) here
+title: Aleksei Ivantsov # your name (or website title) here
+logo: "/images/index.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
+  Creative and driven Android Developer 
   <br><br>
-  Second description 
+  A team player with good interpersonal skills and high cultural awareness, enthusiastic, innovative, analytical and results oriented. Strong analytical thinking. 
   <br><br>
-  <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
+  <a href="https://www.linkedin.com/in/aleksei-ivantsov-237b601/">View My LinkedIn Profile</a> 
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
