--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ logo: "/images/index.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Creative and driven Android Developer 
   <br><br>
-  A team player with good interpersonal skills and high cultural awareness, enthusiastic, innovative, analytical and results oriented. Strong analytical thinking. 
+  My life motto is "ipsa scientia potestas est".
   <br><br>
   <a href="https://www.linkedin.com/in/aleksei-ivantsov-237b601/">View My LinkedIn Profile</a> 
   
