--- a/_config.yml
+++ b/_config.yml
@@ -9,3 +9,4 @@ description: > # your text below (remove <br> elements if you don't need line br
   
 theme: jekyll-theme-minimal
 google_analytics: UA-158894575-1 # your Google Analytics tracking ID here
+permalink: /404.md
