--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Aleksei Ivantsov
 logo: "/images/index.png?raw=true"
 description: >
-  Creative and driven Android Developer цшер collateral knowledge: Python, SQL, C/C++ and etc.
+  Creative and driven Android Developer with collateral knowledge: Python, SQL, C/C++ and etc.
   <br><br>
   My life motto is "ipsa scientia potestas est".
   <br><br>
