--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Aleksei Ivantsov
-logo: "/images/index.png?raw=true"
+logo: "/images/photo.jpg?raw=true"
 description: >
   Creative and driven Android Developer with collateral knowledge: Python, SQL, C/C++ and etc.
   <br><br>
