--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Aleksei Ivantsov
+title: Alex Ivantsov
 logo: "/images/photo.jpg?raw=true"
 description: >
   Creative and driven Android Developer with collateral knowledge: Python, SQL, C/C++ and etc.
