--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: >
   <br><br>
   My life motto is "ipsa scientia potestas est".
   <br><br>
-  <a href="https://www.linkedin.com/in/aleksei-ivantsov-237b601/">View My LinkedIn Profile</a> 
+  <a href="https://www.linkedin.com/in/alekseiivantsov/">View My LinkedIn Profile</a> 
   
 theme: jekyll-theme-minimal
 google_analytics: UA-158894575-1
